Minor updates in tests